syntax = "proto3";
package github.com.cosmos.cosmossdk.x.slashing;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option (gogoproto.protosizer_all) = true;
option (gogoproto.sizer_all) = false;
option go_package = "slashing";

// MissedBlock
message MissedBlock {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.typedecl) = false;
	int64 index = 1;
	bool missed = 2;
}

// MsgUnjail - struct for unjailing jailed validator
message MsgUnjail {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.typedecl) = false;
}

// Params - used for initializing default parameter for slashing at genesis
message Params {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.goproto_stringer) = false;
	option (gogoproto.typedecl) = false;
	google.protobuf.Duration max_evidence_age = 1 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
	int64 signed_blocks_window = 2;
	google.protobuf.Duration downtime_jail_duration = 3 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
}

// Signing info for a validator
message ValidatorSigningInfo {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.goproto_stringer) = false;
	option (gogoproto.typedecl) = false;
	int64 start_height = 1;
	int64 index_offset = 2;
	google.protobuf.Timestamp jailed_until = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	bool tombstoned = 4;
	int64 missed_blocks_counter = 5;
}

